syntax = "proto3";

message FileRef {
    FileRefV1 v1 = 1;
}

message FileRefV1 {
    int32 message_id = 1;
    int64 document_id = 2;
    bytes file_reference = 3;
    int64 access_hash = 4;
    int64 file_size = 5;
}

message UploadToken {
    UploadTokenV1 v1 = 1;
}

message UploadTokenV1 {
    int64 file_id = 1;
    int64 file_size = 2;
}